# vcglib

./: .gitignore  CMakeLists.txt
apps/sample/trimesh_inertia/: urdf_from_file.cpp
